<resources>
    <string name="app_name">ClassStudents</string>

    <string name="name">Name:</string>
    <string name="hintName">Enter Name</string>
    <string name="hintAge">Enter Age</string>
    <string name="hintSex">Enter Sex</string>
    <string name="hintRoll">Enter Roll.No</string>
    <string name="age">Age:</string>
    <string name="sex">Sex:</string>
    <string name="rollNo">Roll No:</string>
    <string name="butSave">Save</string>
    <string-array name="spSex">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
