<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Myfragment">
<TextView
    android:id="@+id/tvName"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_marginTop="50dp"
    android:textSize="20sp"
    android:padding="10dp"
    android:layout_marginStart="20dp"
    android:text="@string/name"/>
    <EditText
        android:id="@+id/etName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hintName"
        android:ems="8"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@id/tvName"
        app:layout_constraintStart_toEndOf="@id/tvName"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/tvAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        app:layout_constraintStart_toStartOf="@id/tvName"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:textSize="20sp"
        android:text="@string/age"/>
    <EditText
        android:id="@+id/etAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hintAge"
        android:ems="8"
        android:inputType="numberSigned"
        android:maxLength="2"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/etName"
        app:layout_constraintStart_toStartOf="@id/etName"
        app:layout_constraintEnd_toEndOf="@id/etName"
        />
    <TextView
        android:id="@+id/tvSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvAge"
        app:layout_constraintStart_toStartOf="@id/tvAge"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:textSize="22sp"
        android:text="@string/sex"/>
    <Spinner
        android:id="@+id/etSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        android:entries="@array/spSex"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:padding="10dp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/etAge"
        app:layout_constraintStart_toStartOf="@id/etAge"
        app:layout_constraintEnd_toEndOf="@id/etRoll"
        />
    <TextView
        android:id="@+id/tvRoll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvSex"
        app:layout_constraintStart_toStartOf="@id/tvSex"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:textSize="20sp"
        android:text="@string/rollNo"/>
    <EditText
        android:id="@+id/etRoll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hintRoll"
        android:ems="8"
        android:inputType="numberSigned"
        android:maxLength="10"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textAlignment="center"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="@id/etAge"
        app:layout_constraintStart_toEndOf="@id/tvRoll"
        app:layout_constraintBottom_toBottomOf="@id/tvRoll"
        app:layout_constraintEnd_toEndOf="@id/etName"
        />
    <Button
        android:id="@+id/btSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="20dp"
        android:text="@string/butSave"
        android:background="@color/colorPrimary"
        android:textSize="15sp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/tvRoll"/>



</android.support.constraint.ConstraintLayout>
